...
          ref={bottomSheetModalRef}
          onChange={handleSheetChanges}>
          <BottomSheetView style={{minHeight: 128, paddingBottom: 24}}>
            <Text
              style={{paddingHorizontal: 12, paddingVertical: 8}}
              variant="titleLarge">
              Select language
            </Text>

            <RadioButton.Group
              value={i18n.language}
              onValueChange={value => {
                i18n.changeLanguage(value);
...
