export type RoomType = {
  id: number;
  label: string;
};

export const rooms: RoomType[] = [
  {
    id: 0,
    label: 'Eva',
  },
  {
    id: 1,
    label: 'Adam',
  },
  {
    id: 2,
    label: 'Alex',
  },
];
