appId: com.mentalassistant
---
- clearState
- launchApp
- tapOn: 'Email'
- inputText: 'maestro@gmail.com'
- hideKeyboard
- tapOn: 'Password'
- inputText: 'wrongpassword'
- hideKeyboard
- tapOn: 'Sign in'
- assertVisible:
    text: 'Invalid login credentials'
    index: 0
- assertVisible:
    text: 'Invalid login credentials'
    index: 1
