appId: com.mentalassistant
---
- clearState
- launchApp
- longPressOn: 'Register now!'
- runScript: 'generateEmail.cjs'
- tapOn: 'Name'
- inputRandomPersonName
- hideKeyboard
- tapOn: 'Surname'
- inputRandomPersonName
- hideKeyboard
- tapOn: 'Email'
- inputText: 'maestro@gmail.com'
- hideKeyboard
- tapOn: 'Password'
- inputText: '123456789'
- hideKeyboard
- tapOn: 'Repeat password'
- inputText: '12345678'
- hideKeyboard
- tapOn: 'Register'
- assertVisible:
    text: 'Passwords do not match!'
    index: 0
- assertVisible:
    text: 'Passwords do not match!'
    index: 1
