appId: com.mentalassistant
---
- clearState
- launchApp
- longPressOn: 'Register now!'
- runScript: 'generateEmail.cjs'
- tapOn: 'Name'
- inputRandomPersonName
- hideKeyboard
- tapOn: 'Surname'
- inputRandomPersonName
- hideKeyboard
- tapOn: 'Email'
- inputText: ${output.email}
- hideKeyboard
- tapOn: 'Password'
- inputText: '12345678'
- hideKeyboard
- tapOn: 'Repeat password'
- inputText: '12345678'
- hideKeyboard
- tapOn: 'Register'
- assertVisible: 'Registration successful'
- tapOn: 'Email'
- inputText: ${output.email}
- hideKeyboard
- tapOn: 'Password'
- inputText: '12345678'
- tapOn: 'Sign in'
- assertVisible: 'Complete tests'
